[gd_scene load_steps=4 format=3 uid="uid://d1qjnqq2nagyi"]

[ext_resource type="Script" path="res://menus/lobby_viewer/lobby_viewer.gd" id="1_buss2"]
[ext_resource type="LabelSettings" uid="uid://dhbiycipdoc0d" path="res://menus/header_label_settings.tres" id="2_q1sf8"]
[ext_resource type="Script" path="res://menus/general/Autofocus.gd" id="3_t45qh"]

[node name="LobbyViewer" type="ColorRect" node_paths=PackedStringArray("lobby_grid", "logs_label", "seal_button", "start_button", "lobby_label", "chat_input", "chat_text")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0117647, 0.203922, 1)
script = ExtResource("1_buss2")
lobby_grid = NodePath("HBoxContainer/ColorRect/VBoxContainer/LobbyVBoxContainer")
logs_label = NodePath("HBoxContainer/ColorRect/VBoxContainer/Logs")
seal_button = NodePath("HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/Seal")
start_button = NodePath("HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/Start")
lobby_label = NodePath("HBoxContainer/ColorRect/VBoxContainer/LabelLobbies")
chat_input = NodePath("HBoxContainer/ColorRect/VBoxContainer/HBoxContainerChat/ChatInput")
chat_text = NodePath("HBoxContainer/ColorRect/VBoxContainer/RichTextLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PaddingLeft" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.215686, 0.054902, 0.423529, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_right = 103.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LabelLobbies" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Lobby Code: 1234"
label_settings = ExtResource("2_q1sf8")
horizontal_alignment = 1

[node name="LobbyVBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainerChat" type="HBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainerChat"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Chat:"
script = ExtResource("3_t45qh")

[node name="ChatButton" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainerChat"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Send"

[node name="Logs" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Ready" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"

[node name="Seal" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Seal"

[node name="Start" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Start"

[node name="ButtonMainMenu" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Leave Lobby"

[node name="PaddingBottom" type="Control" parent="HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="PaddingRight" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[connection signal="text_submitted" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainerChat/ChatInput" to="." method="_on_chat_input_text_submitted"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainerChat/ChatButton" to="." method="_on_chat_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/Seal" to="." method="_on_seal_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
